@@ -1,5 +1,7 @@
 2005-12-03  Ulrich Drepper  <drepper@redhat.com>
 
+	* nis/nss_nisplus/nisplus-network.c (_nss_nisplus_getnetbyaddr_r):
+	Better sized buffers.  Correct error case handling.
 	* nis/nis_error.c (nis_sperror_r): Let snprintf determine whether
 	there is an overflow.
 	* nis/nss_nisplus/nisplus-service.c: Fix locking to use
